--- a/index.html
+++ b/index.html
@@ -132,18 +132,46 @@
   function lockScroll(on) {
     document.body.style.overflow = on ? 'hidden' : '';
   }
-  function resetOtherGames(activeId) {
-    document.querySelectorAll('.game-box').forEach(box => {
-      if (box.id !== activeId) {
-        const btn = box.querySelector('.play-btn');
-        if (btn) btn.style.display = 'block';
-        const ov = box.querySelector('.overlay');
-        if (ov) ov.remove();
-        const c = box.querySelector('canvas');
-        if (c) c.getContext('2d').clearRect(0, 0, c.width, c.height);
+  
+// Properly stops any other running game and resets it to Play button
+function resetOtherGames(activeId) {
+  document.querySelectorAll('.game-box').forEach(box => {
+    if (box.id !== activeId) {
+      const btn = box.querySelector('.play-btn');
+      if (btn) btn.style.display = 'block';
+
+      const overlay = box.querySelector('.overlay');
+      if (overlay) overlay.remove();
+
+      const canvas = box.querySelector('canvas');
+      if (canvas) {
+        const ctx = canvas.getContext('2d');
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
       }
-    });
-  }
+
+      // Game-specific: stop Gravity
+      if (box.id === 'game1' && window.gravityGame) {
+        gravityGame.isRunning = false;
+        clearInterval(gravityGame.timerId);
+      }
+
+      // Game-specific: stop Wall Jumper
+      if (box.id === 'game2' && window.wallGame) {
+        wallGame.isRunning = false;
+        cancelAnimationFrame(wallGame.rafId);
+      }
+
+      // Game-specific: stop Laser Dodger
+      if (box.id === 'game3' && window.laserGame) {
+        laserGame.isRunning = false;
+        clearInterval(laserGame.laserTimerId);
+        cancelAnimationFrame(laserGame.rafId);
+      }
+
+      // Add similar resets for game4 if needed
+    }
+  });
+}
 
   // --- Gravity Switcher Game (Slot 1) ---
   (function gravitySwitcher() {
